--- a/style.css
+++ b/style.css
@@ -1,3 +1,54 @@
-h1{
-    color: blue;
+h1,
+.display{
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+.title{
+    text-align: center;
+}
+
+.container{
+    width: 300px;
+    margin: 50px;
+}
+
+.display{
+    text-align: right;
+    font-size: 30px;
+    padding: 10px;
+    border-bottom: solid;
+}
+
+.row1,
+.row2,
+.row3,
+.row4,
+.row5{
+    display: flex;
+    gap: 5px;
+    margin: 5px;
+}
+
+.backspace,
+.ac{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+button{
+    flex: 1;
+    aspect-ratio: 1 / 1;
+    border-radius: 100px;
+    border: none;
+    font-size: 30px;
+    transition-duration: 0.2s;
+    background-color: rgb(242, 242, 242);
+}
+
+button:hover{
+    background-color: lightgray;
+}
+
+.blank:hover{
+    background-color: rgb(242, 242, 242);
 }
